Add media queries

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,3 +84,38 @@ svg {
   width: 100%;
   height: 100%;
 }
+
+/*  MEDIA QUERIES  */
+
+@media (max-width: 1024px) {
+  header {
+    background: linear-gradient(rgb(255, 4, 234), rgb(35, 0, 36) 80%),
+      rgb(255, 4, 234);
+  }
+
+  footer {
+    background: rgb(35, 0, 36);
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    background: linear-gradient(rgb(4, 255, 4), rgb(7, 36, 0) 80%),
+      rgb(4, 255, 4);
+  }
+
+  footer {
+    background: rgb(7, 36, 0);
+  }
+}
+
+@media (max-width: 480px) {
+  header {
+    background: linear-gradient(rgb(255, 4, 4), rgb(36, 0, 0) 80%),
+      rgb(255, 4, 4);
+  }
+
+  footer {
+    background: rgb(36, 0, 0);
+  }
+}
